# Langlint

./: .buildinfo  .gitignore  .langlint.yml  .pre-commit-config-test.yaml  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  MANIFEST.in  PRIVACY.md  README.md  changelog.html  check_consistency.py  cli.html  configuration.html  contributing.html  coverage.xml  genindex.html  index.html  installation.html  license.html  local_ci_check.ps1  objects.inv  py-modindex.html  pyproject.toml  pytest.ini  quickstart.html  search.html  searchindex.js  setup.py  test_comprehensive_docstrings.py  test_edge_cases.py  test_filter_simple.py  test_final_comprehensive.py  test_issue5_exact.py  test_language_filter.py  usage.html
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  ci.yml.disabled  docs.yml  release.yml
_modules/: index.html
_modules/langlint/core/: cache.html  config.html  dispatcher.html
_modules/langlint/parsers/: base.html  config_parser.html  generic_code_parser.html  markdown_parser.html  notebook_parser.html  python_parser.html
_modules/langlint/translators/: base.html  google_translator.html  mock_translator.html
_sources/: changelog.rst.txt  cli.rst.txt  quickstart.rst.txt
_sources/api/: parsers.rst.txt  translators.rst.txt
api/: core.html  parsers.html  translators.html
crates/: README.md
crates/langlint_cli/: Cargo.toml
crates/langlint_cli/src/: main.rs
crates/langlint_cli/src/commands/: fix.rs  mod.rs  scan.rs  translate.rs
crates/langlint_core/: Cargo.toml
crates/langlint_core/src/: cache.rs  config.rs  lib.rs  types.rs
crates/langlint_parsers/: Cargo.toml
crates/langlint_parsers/src/: generic.rs  lib.rs  notebook.rs  python.rs
crates/langlint_py/: Cargo.toml  MANIFEST.in  build_wheel.py  pyproject.toml
crates/langlint_py/src/: lib.rs
crates/langlint_translators/: Cargo.toml
crates/langlint_translators/src/: google.rs  lib.rs  mock.rs
docs/: conf.py  configuration.rst  contributing.rst  index.rst  requirements.txt  usage.rst
docs_source/: configuration.rst  index.rst  installation.rst  license.rst
docs_source/api/: core.rst
examples/: README.md
examples/jupyter_notebook/: README.md  data_analysis.ipynb
examples/python_translation/: README.md  example_chinese.py  example_japanese.py
examples/scenario_b_documentation_globalization/docs/: index.md
langlint/: __init__.py  cli.py
langlint/core/: __init__.py  cache.py  config.py  dispatcher.py
langlint/parsers/: __init__.py  base.py  config_parser.py  generic_code_parser.py  markdown_parser.py  notebook_parser.py  python_parser.py
langlint/translators/: __init__.py  base.py  deepl_translator.py  google_translator.py  mock_translator.py  openai_translator.py
langlint_py/: .gitkeep
test_dir/: file1.py  file2.py
tests/: __init__.py  test_cli.py  test_cli_advanced.py  test_cli_edge_cases.py  test_cli_wrapper.py  test_fallback.py  test_import.py  test_import_fallback.py  test_scan.py  test_translate.py
