[package]
name = "langlint_cli"
version.workspace = true
edition = "2021"

[[bin]]
name = "langlint"
path = "src/main.rs"

[dependencies]
langlint_core = { path = "../langlint_core" }
langlint_parsers = { path = "../langlint_parsers" }
langlint_translators = { path = "../langlint_translators" }

clap = { version = "4.5", features = ["derive", "cargo"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
anyhow.workspace = true
tokio = { version = "1.0", features = ["full"] }
colored = "2.1"
indicatif = "0.17"
walkdir = "2.5"

[dev-dependencies]
tempfile = "3.8"