[package]
name = "langlint_core"
version.workspace = true
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }
toml = { workspace = true }
serde_yaml = { workspace = true }
whatlang = "0.16"

[dev-dependencies]
tempfile = "3.8"
