[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "langlint"
version = "1.0.1"
description = "High-performance automated translation platform powered by Rust"
authors = [{name = "Zhiang He", email = "ang@hezhiang.com"}]
license = {text = "MIT"}
readme = "../../README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
]
dependencies = []

[project.scripts]
langlint = "langlint.cli:main"

[project.urls]
Homepage = "https://github.com/HzaCode/Langlint"
Repository = "https://github.com/HzaCode/Langlint.git"
Issues = "https://github.com/HzaCode/Langlint/issues"

[tool.maturin]
python-source = "../.."
module-name = "langlint.langlint_py"
include = [
    { path = "../../langlint/__init__.py", format = "sdist" },
    { path = "../../langlint/cli.py", format = "sdist" },
    { path = "../../langlint/py.typed", format = "sdist" }
]

