[package]
name = "langlint_translators"
version.workspace = true
edition = "2021"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
async-trait = "0.1"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
rand = "0.8"
futures = "0.3"
